// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NetworkSettings doesnt have the moderators tab if only a moderator 1`] = `
<withRouter(Connect(FullPageModal))
  content={
    Array [
      Object {
        "component": <NetworkSettingsTab
          network={
            Object {
              "communities": Array [],
              "id": 1,
              "moderators": Array [],
              "slug": "mycelium",
            }
          }
          setConfirm={[Function]}
          updateNetworkSettings={[Function]}
        />,
        "name": "Settings",
        "path": "/n/mycelium/settings",
      },
      Object {
        "component": <Memo(Connect(NetworkCommunitiesTab))
          isAdmin={false}
          isModerator={true}
          network={
            Object {
              "communities": Array [],
              "id": 1,
              "moderators": Array [],
              "slug": "mycelium",
            }
          }
        />,
        "name": "Communities",
        "path": "/n/mycelium/settings/communities",
      },
      Object {
        "path": "/n/mycelium/settings/communities/:slug",
        "render": [Function],
      },
    ]
  }
  goToOnClose="/n/mycelium"
  narrow={true}
/>
`;

exports[`NetworkSettings matches the previous snapshot 1`] = `
<withRouter(Connect(FullPageModal))
  content={
    Array [
      Object {
        "component": <NetworkSettingsTab
          network={
            Object {
              "communities": Array [],
              "id": 1,
              "moderators": Array [],
              "slug": "mycelium",
            }
          }
          setConfirm={[Function]}
          updateNetworkSettings={[Function]}
        />,
        "name": "Settings",
        "path": "/n/mycelium/settings",
      },
      Object {
        "component": <Memo(Connect(NetworkModeratorsTab))
          network={
            Object {
              "communities": Array [],
              "id": 1,
              "moderators": Array [],
              "slug": "mycelium",
            }
          }
        />,
        "name": "Moderators",
        "path": "/n/mycelium/settings/moderators",
      },
      Object {
        "component": <Memo(Connect(NetworkCommunitiesTab))
          isAdmin={true}
          isModerator={false}
          network={
            Object {
              "communities": Array [],
              "id": 1,
              "moderators": Array [],
              "slug": "mycelium",
            }
          }
        />,
        "name": "Communities",
        "path": "/n/mycelium/settings/communities",
      },
      Object {
        "path": "/n/mycelium/settings/communities/:slug",
        "render": [Function],
      },
    ]
  }
  goToOnClose="/n/mycelium"
  narrow={true}
/>
`;
